2006-10-04  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimpfreeselecttool.c: unset scroll-lock (bug #359548).

2006-10-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/maze/maze_face.c: minor code cleanup.

2006-10-03  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-drawable.c: a FALSE return from
	gimp_drawable_mask_bounds() doesn't mean failure. Restore old
	behavior. Fixes bug #357223.

2006-10-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/dialogs/offset-dialog.c:  apply patch from David
	Gowers, with minor cleanups, to use item dimensions rather
	than image dimensions; fixes bug #358322.
	
2006-10-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/tools-enums.[ch]: change labels for transform
	type enum.

	* app/tools/gimpmoveoptions.c:
	* app/tools/gimptransformoptions.c:  change "Affect:" to
	"Move:" or "Transform:", respectively.  Fixes bug #358824.
	
2006-10-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpimage-convert.c
	(median_cut_pass2_nodestruct_dither_rgb): adjust alpha-dithering
	and make code more readable; fixes bug #358851 as suggested
	by Tor Lillqvist.
	
2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppalette-load.[ch]: added
	gimp_palette_load_detect_format().

	* app/core/gimppalette-import.c: removed it here. Also removed all
	file I/O related includes.

2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppalette-load.[ch]: added functions to load ACT,
	RIFF and PSP palette files but don't use them as data file
	loaders (yet?)

	* app/core/gimppalette-import.c (gimp_palette_import_from_file):
	use the functions instead of implementing all formats inline.

2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/gimppalette-load.[ch]
	* app/core/gimppalette-save.[ch]: new files.

	* app/core/gimppalette.[ch]: removed loading and saving code here.

	* app/core/gimp.c